This bytecode processor runs